syntax = "proto3";

package contacts;

option go_package = "github.com/ikermy/AiR_Common/pkg/rpc/pb;pb";

// Источник/сервис, откуда пришёл контакт/канал/группа
enum Service {
  SERVICE_UNSPECIFIED = 0;
  TELEGRAM = 1;
  WHATSAPP = 2;
}

// Контакт (human или bot)
message Contact {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string phone = 5;
}

// Канал
message Channel {
  int64 id = 1;
  string title = 2;
  string username = 3;
}

// Обычная группа
message Group {
  int64 id = 1;
  string title = 2;
}

// Супергруппа (Telegram-специфично)
message Supergroup {
  int64 id = 1;
  string title = 2;
  string username = 3;
}

// Финальный результат, совместимый с AiR_TgUserBot
message Result {
  repeated Contact humans = 1;
  repeated Contact bots = 2;
  repeated Channel channels = 3;
  repeated Group groups = 4;
  repeated Supergroup supergroups = 5;
  Service service = 6;
  uint32 user_id = 7;
}

// Сервис для передачи данных
service ContactsService {
  rpc SendResult (Result) returns (Empty);
}

message Empty {}
